manifests/aws-routing/ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-alb
  namespace: nginx
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    # This ensures the ALB picks up the correct subnets
    alb.ingress.kubernetes.io/subnets: subnet-073cb814d13c807f5, subnet-0a455441742bcb3f5
spec:
  ingressClassName: alb # THE NEW STANDARD
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
